[package]
name = "picker"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "libpicker"
# crate-type = ["cdylib"] #dynamic library

[dependencies]
# fasthash = "0.4.0"
rustc-hash = "1.1.0"
rand = "0.8.4"
# autopilot = "0.4.0"
tantivy = "0.16.1"
# native-windows-gui = "1.0.12"
# native-windows-gui = {git = "https://github.com/gabdube/native-windows-gui/"}
winapi = "0.3.9"
glow = "0.6.0"
# iced = "0.3.0"
# iced_glow = "0.2.0"
# iced_glutin = "0.2.0"
# iced_graphics = "0.2.0"
# iced = {git = "https://github.com/iced-rs/iced/", sha="26d053ab3887b73f854a1174864d0fec221c5c9b"}
# iced_glow = {git = "https://github.com/iced-rs/iced/", sha="26d053ab3887b73f854a1174864d0fec221c5c9b"}
# iced_glutin = {git = "https://github.com/iced-rs/iced/", sha="26d053ab3887b73f854a1174864d0fec221c5c9b"}
# iced_graphics = {git = "https://github.com/iced-rs/iced/", sha="26d053ab3887b73f854a1174864d0fec221c5c9b"}
# winit = "0.26.0"
# lazy_static = "1.4.0"
# wasm-bindgen = "0.2.78"

# [dev-dependencies]
# native-windows-derive = {git="https://github.com/gabdube/native-windows-gui/"}
# native-windows-derive = "1.0.3"

[dependencies.druid]
# path = "../druid/druid"
git = "https://github.com/LuisThiamNye/druid"
sha = "efc8c03b5d36ba470326006c5b0d7ea7eb004f30"
features = ["raw-win-handle", "im"]
[dependencies.druid-shell]
# path = "../druid/druid-shell"
git = "https://github.com/LuisThiamNye/druid"
sha = "efc8c03b5d36ba470326006c5b0d7ea7eb004f30"

[dependencies.windows]
version = "0.28.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
]